--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.10",
+        "masmerise/livewire-toaster": "^0.4.0",
         "spatie/laravel-medialibrary": "^10.7",
         "spatie/laravel-permission": "^5.7",
         "spatie/laravel-tags": "^4.3"
