--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "@alpinejs/intersect": "^3.13.3",
         "dropzone": "^6.0.0-beta.2"
     }
 }
