--- a/composer.json
+++ b/composer.json
@@ -5,26 +5,28 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
+        "php": "^8.1",
+        "althinect/filament-spatie-roles-permissions": "^2.2",
+        "filament/filament": "^3.2",
+        "filament/spatie-laravel-media-library-plugin": "3.2",
+        "filament/spatie-laravel-tags-plugin": "3.2",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/breeze": "^1.15",
-        "laravel/framework": "^9.19",
-        "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7",
-        "livewire/livewire": "^2.10",
-        "masmerise/livewire-toaster": "^0.4.0",
-        "spatie/laravel-medialibrary": "^10.7",
-        "spatie/laravel-permission": "^5.7",
-        "spatie/laravel-tags": "^4.3"
+        "laravel/framework": "^10.10",
+        "laravel/sanctum": "^3.3",
+        "laravel/tinker": "^2.8",
+        "livewire/livewire": "^3.4",
+        "spatie/laravel-medialibrary": "11.0.0",
+        "spatie/laravel-permission": "^6.4",
+        "spatie/laravel-tags": "^4.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
-        "laravel/sail": "^1.0.1",
+        "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.1",
+        "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -41,7 +43,8 @@
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
+            "@php artisan package:discover --ansi",
+            "@php artisan filament:upgrade"
         ],
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
